--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "^8.0.0",
+    "@react-native-community/datetimepicker": "7.7.0",
     "@react-native-picker/picker": "^2.7.5",
-    "expo": "~50.0.17",
-    "expo-constants": "~15.4.6",
-    "expo-linking": "~6.2.2",
-    "expo-router": "~3.4.10",
-    "expo-status-bar": "~1.11.1",
+    "expo": "^51.0.2",
+    "expo-constants": "~16.0.1",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-status-bar": "~1.12.1",
     "lottie-ios": "^4.4.3",
-    "lottie-react-native": "^6.7.2",
+    "lottie-react-native": "6.7.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "0.74.1",
     "react-native-appwrite": "^0.3.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
