--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@react-native-community/datetimepicker": "7.7.0",
+    "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
-    "expo": "^51.0.2",
+    "expo": "~51.0.6",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.11",
+    "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "lottie-ios": "^4.4.3",
     "lottie-react-native": "6.7.0",
