--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-native-picker/picker": "^2.7.5",
     "animated-number-react": "^0.1.2",
-    "expo": "~51.0.6",
+    "dotenv": "^16.4.5",
+    "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
@@ -24,10 +25,11 @@
     "lottie-react-native": "6.7.0",
     "lottie-web": "^5.12.2",
     "nativewind": "^2.0.11",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-appwrite": "^0.3.0",
+    "react-native-dotenv": "^3.4.11",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
