--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@lordicon/element": "^1.6.0",
     "@lordicon/react": "^1.6.0",
     "@react-native-community/datetimepicker": "^8.0.1",
-    "@react-native-picker/picker": "^2.7.5",
+    "@react-native-picker/picker": "^2.7.6",
     "animated-number-react": "^0.1.2",
     "dotenv": "^16.4.5",
     "expo": "~51.0.8",
@@ -29,7 +29,10 @@
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
     "react-native-appwrite": "^0.3.0",
+    "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
+    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-picker-select": "^9.1.3",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
