--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-gifted-charts": "^1.4.10",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-picker-select": "^9.1.3",
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7"
