--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-native-picker/picker": "^2.7.5",
     "animated-number-react": "^0.1.2",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.9",
+    "expo": "~51.0.11",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.14",
+    "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
     "lord-icon-element": "^4.1.2",
     "lottie-ios": "^4.4.3",
@@ -27,7 +27,7 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.1",
+    "react-native": "^0.74.2",
     "react-native-appwrite": "^0.3.0",
     "react-native-dialog": "^9.3.0",
     "react-native-dotenv": "^3.4.11",
@@ -38,7 +38,7 @@
     "react-native-progress": "^5.0.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "^15.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-router-dom": "^6.23.1",
     "recharts": "^2.12.7"
