--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.15",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.16",
     "lord-icon-element": "^4.1.2",
     "lottie-ios": "^4.4.3",
     "lottie-react-native": "6.7.0",
@@ -39,10 +40,10 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-svg": "^15.2.0",
+    "react-native-toast-message": "^2.2.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-router-dom": "^6.23.1",
-    "recharts": "^2.12.7",
-    "expo-updates": "~0.25.16"
+    "recharts": "^2.12.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
