--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@react-native-picker/picker": "^2.7.5",
     "animated-number-react": "^0.1.2",
     "dotenv": "^16.4.5",
-    "expo": "~51.0.11",
+    "expo": "^51.0.12",
     "expo-constants": "~16.0.2",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.15",
+    "expo-router": "^3.5.16",
     "expo-status-bar": "~1.12.1",
     "expo-updates": "~0.25.16",
     "lord-icon-element": "^4.1.2",
